--- a/stockprice.ipynb
+++ b/stockprice.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aDYuGNZFvZ2I"
       },
@@ -40,8 +40,7 @@
         "from sklearn.preprocessing import MinMaxScaler\n",
         "import torch\n",
         "import torch.nn as nn\n",
-        "from torch.utils.data import DataLoader, TensorDataset\n",
-        ""
+        "from torch.utils.data import DataLoader, TensorDataset\n"
       ]
     },
     {
@@ -50,13 +49,12 @@
         "## Step 1: Load and Preprocess Data\n",
         "# Load training and test datasets\n",
         "df_train = pd.read_csv('trainset.csv')\n",
-        "df_test = pd.read_csv('testset.csv')\n",
-        ""
+        "df_test = pd.read_csv('testset.csv')\n"
       ],
       "metadata": {
         "id": "NEn4FMk5v8ee"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +67,7 @@
       "metadata": {
         "id": "L0Ox7JlOwBCv"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +81,7 @@
       "metadata": {
         "id": "MLnWFgvvwEdV"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,14 +104,13 @@
       "metadata": {
         "id": "ENmP7AbfwKv2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "x_train.shape, y_train.shape, x_test.shape, y_test.shape\n",
-        ""
+        "x_train.shape, y_train.shape, x_test.shape, y_test.shape\n"
       ],
       "metadata": {
         "colab": {
@@ -122,7 +119,7 @@
         "id": "TpqGdW7SwVQz",
         "outputId": "0e21ea3d-25ea-4993-e3a3-d6fa3a3a9456"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +147,7 @@
       "metadata": {
         "id": "lfCdnGejwbK1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,7 +160,7 @@
       "metadata": {
         "id": "XnPGprnmweIX"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +181,7 @@
       "metadata": {
         "id": "gxtVfqYdwsRa"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,13 +191,12 @@
         "\n",
         "model = RNNModel()\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "model = model.to(device)\n",
-        ""
+        "model = model.to(device)\n"
       ],
       "metadata": {
         "id": "GD7JFDCExVcw"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,7 +211,7 @@
         "id": "aOOIa0-nxZw8",
         "outputId": "80f3f0a6-9b76-4661-c7f3-a4c447da6625"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,8 +228,7 @@
         "from torchinfo import summary\n",
         "\n",
         "# input_size = (batch_size, seq_len, input_size)\n",
-        "summary(model, input_size=(64, 60, 1))\n",
-        ""
+        "summary(model, input_size=(64, 60, 1))\n"
       ],
       "metadata": {
         "colab": {
@@ -242,7 +237,7 @@
         "id": "x3GeBNLRxd5J",
         "outputId": "49cafb36-b6fd-44a2-96e9-8f1ad83bc9a8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +276,7 @@
       "metadata": {
         "id": "cNDFFBG7zea6"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,7 +357,7 @@
         "id": "iFmY0dCd0k-t",
         "outputId": "79d0a405-5eb4-47ca-dd9b-709668971c32"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,12 +408,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 633
         },
         "id": "1bg7ivlv0v0g",
         "outputId": "0ea6e858-9e45-4d51-dd1c-46f27fda2c6d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
